[gd_scene load_steps=3 format=3 uid="uid://cr3qxj5wg2oj6"]

[ext_resource type="Script" uid="uid://big3gx7eelcb5" path="res://content/inventory/inventory_ui.gd" id="1_inventory"]
[ext_resource type="Script" uid="uid://26s4m5acltbj" path="res://content/inventory/inventory_grid.gd" id="2_grid"]

[node name="InventoryUI" type="Control"]
custom_minimum_size = Vector2(400, 600)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_inventory")

[node name="InventoryGrid" type="Node" parent="."]
script = ExtResource("2_grid")

[node name="InfoPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
mouse_filter = 1

[node name="InfoLabel" type="Label" parent="InfoPanel"]
layout_mode = 2
mouse_filter = 1
text = "Press Tab to toggle inventory | Value: $0 | Space: 0/25 | Nearby Ores: 0"
horizontal_alignment = 1
vertical_alignment = 1
